--- a/assets/style.css
+++ b/assets/style.css
@@ -1,16 +1,19 @@
+/* Styling and font selection and size for index page */
+
 @import url('https://fonts.googleapis.com/css2?family=Acme&display=swap');
 
 body {
     background-color:black;
-}
-
-*{
-    font-size: 150%;
+    font-size: 350%;
     font-family: 'Acme', sans-serif;
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     color: white;
+}
+
+*{
+  
 }
 
 h1 { 
@@ -20,7 +23,6 @@ h1 {
 }
 
 .box {
-   
     width: 100%;
     height: 1000px;
     display: flex;
@@ -53,3 +55,24 @@ h1 {
     transform: scale(1.1);
 }
 
+/* Quiz page styling */
+
+#quiz-page {
+    font-size: 150%;
+    font-family: 'Acme', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+.answer-box {
+    display: flex;
+    margin-bottom: 10px;
+    width: 70%;
+    border-radius: 20px;
+    background:green;
+    font-size: 100%;
+   
+
+}
