--- a/assets/style.css
+++ b/assets/style.css
@@ -68,11 +68,18 @@ h1 {
 
 .answer-box {
     display: flex;
+    margin: 0 auto;
     margin-bottom: 10px;
+    padding-left: 20px;
     width: 70%;
     border-radius: 20px;
     background:green;
     font-size: 100%;
-   
+}
+
+.answer-box:hover {
+    transition: 0.3s;
+    transform: scale(1.05);
 
 }
+
