--- a/assets/style.css
+++ b/assets/style.css
@@ -12,10 +12,6 @@ body {
     color: white;
 }
 
-*{
-  
-}
-
 h1 { 
     font-size: 150%;
     color: white;
@@ -55,7 +51,7 @@ h1 {
     transform: scale(1.1);
 }
 
-/* Quiz page styling */
+/* Quiz page and solution field styling */
 
 #quiz-page {
     font-size: 150%;
@@ -81,5 +77,46 @@ h1 {
     transition: 0.3s;
     transform: scale(1.05);
 
+}
+
+.solution-letter {
+    padding: 10px;
+    color: white;
+}
+
+.solution-data {
+    padding: 10px;
+    width: 100%;
+}
+
+/* Styles for the score display */
+#score-display {
+    justify-content: space-between;
+    display: flex;
+    
+}
+
+.score-calculator {
+    text-align: center;
+    font-size: 200%;
+}
+
+.score-text {
+    text-align: center;
+}
+
+#status-bar {
+    width: 400px;
+    height: 25px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: 5px solid yellow;
+    overflow: hidden;
+}
+
+#status-bar-full {
+    height: 25px;
+    background: yellow;
+    width: 0%;
 }
 
