--- a/assets/style.css
+++ b/assets/style.css
@@ -18,6 +18,7 @@ body {
     padding-top: 50px;
     padding-left: 20px;
     padding-right: 20px;
+    margin: 0 auto;  
 }
 
 #inquiry { 
@@ -31,12 +32,11 @@ body {
 
 .box {
     padding-top: 150px;
-    padding-left: 50px;
     width: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-    margin: 0 aut0;
+    
 }
 
 .home {
@@ -101,7 +101,7 @@ body {
     width: 100%;
 }
 
-/* Styling for right and wrong selection*/
+/* Styling for right and wrong selection (depending on users choice)*/
 
 .right {
     background: yellow;
@@ -112,7 +112,7 @@ body {
     background: red;
 }
 
-/* Styles for the score display */
+/* Styles for the score display section */
 
 .scoreContainer {
     margin: 0 auto;
@@ -202,6 +202,9 @@ body {
         margin: 0;
     }
 
+
+/* End page styling*/  
+
     .navigation {
         margin-top: 50px;
         clear: both;
@@ -210,6 +213,228 @@ body {
     #navigation {
         margin-top: 50px;
         float: left;
-        margin: 0 aut0;
     }
+
+
+/* Styling and font selection and size for index page */
+
+body {
+    background-color:black;
+    font-size: 350%;
+    font-family: 'Acme', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+.intro-text {
+    font-size: 80%;
+    text-align: center;
+    padding-top: 50px;
+    padding-left: 20px;
+    padding-right: 20px;
+    margin: 0 auto;  
+}
+
+#inquiry { 
+    margin-top: 150px;
+    margin-bottom: 100px;
+    margin-left: 50px;
+    font-size: 150%;
+    color: white;
+    
+}
+
+.box {
+    padding-top: 150px;
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    
+}
+
+.home {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    flex-direction: column;
+}
+
+.navigation {
+    width: 50%;
+    text-align: center;
+    margin-bottom: 10px;
+    padding: 20px;
+    font-size: 80%;
+    color: white;
+    text-decoration: none;
+    background: green;
+    border-radius: 50px;
+}
+
+.navigation:hover {
+    transition: 0.3s;
+    transform: scale(1.1);
+}
+
+/* Quiz page and solution field styling */
+
+#quizPage {
+    font-size: 150%;
+    font-family: 'Acme', sans-serif;
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    color: white;
+}
+
+.answerBox {
+    display: flex;
+    margin: 0 auto;
+    margin-bottom: 10px;
+    padding-left: 0px;
+    width: 70%;
+    border-radius: 20px;
+    background:green;
+    font-size: 100%;
+}
+
+.answerBox:hover {
+    transition: 0.3s;
+    transform: scale(1.05);
+
+}
+
+.solutionLetter {
+    padding: 10px;
+    color: white;
+}
+
+.solutionData {
+    padding: 10px;
+    width: 100%;
+}
+
+/* Styling for right and wrong selection (depending on users choice)*/
+
+.right {
+    background: yellow;
+}
+
+.wrong{
+   
+    background: red;
+}
+
+/* Styles for the score display section */
+
+.scoreContainer {
+    margin: 0 auto;
+    height: 200px;
+}
+
+
+.scoreContainer2 {
+    margin: 0 auto;
+    height: 200px;
+}
+
+
+.scoreDisplay {
+    justify-content: space-between;
+    display: flex;
+}
+
+.scoreCalculator {
+    text-align: center;
+    font-size: 200%;
+}
+
+.scoreText {
+    text-align: center;
+}
+
+#statusBar {
+    width: 350px;
+    height: 25px;
+    margin-top: 10px;
+    border-radius: 10px;
+    border: 5px solid yellow;
+    overflow: hidden;
+}
+
+#statusBarFull {
+    height: 25px;
+    background: yellow;
+    width: 0%;
+}
+
+/* Styles for smaller screen sizes*/
+
+@media screen and (max-width: 650px) {
+
+/* Intro page styling for smaller screens*/
+
+    .intro-text {
+        font-size: 40%;
+    }    
+
+    h2 {
+        font-size: 80%;
+    }
+
+
+/* Main quiz page styling for smaller screens*/
+
+
+    #inquiry { 
+        font-size: 120%;
+    }
+
+    .scoreContainer {
+        margin: 0 auto;
+        height: 100px;
+    }
+
+    .scoreContainer2 {
+        clear: left;
+        margin: 0 auto;
+        height: 200px;
+    }
+
+    .scoreDisplay {
+        display: flex;
+        flex-direction: column;
+    }
+
+    .scoreCalculator {
+        margin: 0;
+
+    }
+
+    .scoreText {
+        margin: 0;
+    }
+
+
+/* End page styling*/  
+
+    .navigation {
+        margin-top: 50px;
+        clear: both;
+    }
+    
+    #navigation {
+        margin-top: 50px;
+        float: left;
+    }
+    
+    .box > div { 
+        margin-left: 50px;
+    }
+
+
+}
 }
